fix: 재료 등록 시 정규화 오류 수정